added create button functions in hosp

--- a/VaccineManagementSystem/src/UI/Distributor/ManageOrganization.form
+++ b/VaccineManagementSystem/src/UI/Distributor/ManageOrganization.form
@@ -28,7 +28,7 @@
                           <Group type="102" attributes="0">
                               <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
-                              <Component id="cbO" min="-2" pref="128" max="-2" attributes="0"/>
+                              <Component id="cbO" min="-2" pref="256" max="-2" attributes="0"/>
                           </Group>
                           <Component id="jScrollPane1" min="-2" pref="281" max="-2" attributes="0"/>
                       </Group>
@@ -38,7 +38,7 @@
                       <Component id="btnAO" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="264" max="32767" attributes="0"/>
+              <EmptySpace pref="145" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -113,6 +113,9 @@
           </StringArray>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbOActionPerformed"/>
+      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value=""/>
       </AuxValues>
