Username validation in CDC and distributor

--- a/VaccineManagementSystem/src/UI/Distributor/ManageUser.form
+++ b/VaccineManagementSystem/src/UI/Distributor/ManageUser.form
@@ -51,7 +51,7 @@
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="-2" pref="65" max="-2" attributes="0"/>
-                              <Component id="btnUser" min="-2" max="-2" attributes="0"/>
+                              <Component id="btnCreate" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -98,7 +98,7 @@
                   <Component id="lblP" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
-              <Component id="btnUser" min="-2" max="-2" attributes="0"/>
+              <Component id="btnCreate" min="-2" max="-2" attributes="0"/>
               <EmptySpace pref="315" max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -163,12 +163,12 @@
         <Property name="text" type="java.lang.String" value="Password :"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="btnUser">
+    <Component class="javax.swing.JButton" name="btnCreate">
       <Properties>
         <Property name="text" type="java.lang.String" value="Create"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnUserActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCreateActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JComboBox" name="cbO">
@@ -223,6 +223,9 @@
       </AuxValues>
     </Component>
     <Component class="javax.swing.JTextField" name="txtUN">
+      <Events>
+        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtUNKeyReleased"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
